Changed map size

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
     <li class="contact"><i class="contact-label">{{labels.location}}:</i><br>{{street}}, {{city}}, {{postal_code}}</li>
   </ul>
   <div class=" col-md">
-  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11196.40375869351!2d-73.63142225416898!3d45.44762201616188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91127eb93b2c7%3A0xa79298df5928b8a0!2sLasalle%2C%20QC%20H8N%202W8!5e0!3m2!1sen!2sca!4v1585279050655!5m2!1sen!2sca" width="500" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11196.40375869351!2d-73.63142225416898!3d45.44762201616188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91127eb93b2c7%3A0xa79298df5928b8a0!2sLasalle%2C%20QC%20H8N%202W8!5e0!3m2!1sen!2sca!4v1585279050655!5m2!1sen!2sca" width="90%" height="200vw" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
   </div>
 
 </div>
