Added new images

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -44,15 +44,15 @@
 }
 
 #image-1 {  
-  background-image: url('../assets/img/img-1.jpg');
+  background-image: url('../assets/img/img10.jpeg');
 }
 
 #image-2 {
-  background-image: url('../assets/img/img-2.jpg');
+  background-image: url('../assets/img/img26.jpeg');
 }
 
 #image-3 {
-  background-image: url('../assets/img/img-3.jpg');
+  background-image: url('../assets/img/img9.jpeg');
 }
 
 
