Changed default language to French

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,10 @@
   <div class="topnav languages">
     <div class="btn-group btn-group-toggle" data-toggle="buttons">
       <label class="btn btn-secondary language-button active">
-        <input type="radio" name="options" id="english" autocomplete="off" (click)="changeLanguage($event.target.id)" checked ngModel> English
+        <input type="radio" name="options" id="english" autocomplete="off" (click)="changeLanguage($event.target.id)" ngModel> English
       </label>
       <label class="btn btn-secondary language-button">
-        <input type="radio" name="options" id="french" autocomplete="off" (click)="changeLanguage($event.target.id)" ngModel> Francais
+        <input type="radio" name="options" id="french" autocomplete="off" (click)="changeLanguage($event.target.id)" checked ngModel> Francais
       </label>
     </div>
   </div>
