--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,12 +31,8 @@
     <h2 class="card-header text-center">{{labels.product}}</h2>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
-        <div *ngFor='let product of products; let i = index' class="carousel-item" [ngClass]="{'active':i === 0}">
-          <img class="d-block w-100" src="{{ product.image }}" alt="First slide">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>{{product.name}}</h5>
-            <p>{{product.description}}</p>
-          </div>
+        <div *ngFor='let product of products; let i = index' class="carousel-item carousel-view" [ngClass]="{'active':i === 0}" [style.height.px]="screenHeight">
+          <img class="d-block carousel-image" src="{{ product.image }}" alt="First slide">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -50,8 +46,6 @@
     </div>
   </div>
     
-
-
   <div class="card information">
     <h2 class="card-header text-center">{{labels.contact}}</h2>
     <div class="row">
